<resources>
    <string name="app_name">HomeWork19 Instrumental Tests</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="patronymic">Отчество</string>
    <string name="add">Добавить</string>
    <string name="label_text">Введите данные</string>
    <string name="sample_name">Александр</string>
    <string name="sample_surname">Пушкин</string>
    <string name="sample_patronymic">Сергеевич</string>
    <string name="sample_fullname">Пушкин Александр Сергеевич</string>D
    <string name="detail_info">Детальная информация</string>
    <string name="person_info">Данные о пользователе</string>D
</resources>
